deploy/kind/config/1.ingress.yaml
---
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
 name: app
 namespace: default
 annotations:
   ingress.class: haproxy
   #whitelist: 127.0.0.1, 127.0.0.2
spec:
 rules:
 - host: hr.haproxy
   http:
     paths:
     - path: /web
       backend:
         serviceName: web-zagreb
         servicePort: 8181
     - backend:
         serviceName: web-zagreb
         servicePort: 8181
---
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
 name: app2
 namespace: default
 annotations:
   ingress.class: haproxy
spec:
 rules:
 - host: fr.haproxy
   http:
     paths:
     - path: /
       backend:
         serviceName: web-paris
         servicePort: 8181
     - path: /1
       backend:
         serviceName: web-paris
         servicePort: 8181
     - path: /2
       backend:
         serviceName: web-paris
         servicePort: 8181
     - path: /3
       backend:
         serviceName: web-paris
         servicePort: 8181
     - path: /4
       backend:
         serviceName: web-paris
         servicePort: 8181
     - path: /5
       backend:
         serviceName: web-paris
         servicePort: 8181
